--- a/.github/workflows/upload-gh-pages.yml
+++ b/.github/workflows/upload-gh-pages.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - "master"
+      - "release-*"
 
 env:
   PIP_CACHE_PATH: "~/.cache/pip"
@@ -45,6 +46,23 @@ jobs:
         shell: bash
         run: |
           python make_docs.py
+
+      - name: Check release
+        shell: bash
+        run: |
+          echo ${{ github.event.ref }} 
+          if [[ ${{ github.event.ref }} =~ ^refs/tags/release-* ]]; then
+            echo :: set-output name=release::true
+          fi
+
+      - name: Copy docs
+        if: steps.check-tag.outputs.release == 'true'
+        shell: bash
+        run: |
+          version=$(echo ${{ github.event.ref }} | grep -o -E "([0-9]+\.){1}[0-9]+(\.[0-9]+)?") 
+          mkdir -p docs/api/$version
+          cp docs/api/index.html docs/api/$version/
+          git checkout -- docs/api/index.html 
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
