--- a/.github/workflows/upload-gh-pages.yml
+++ b/.github/workflows/upload-gh-pages.yml
@@ -48,6 +48,7 @@ jobs:
           python make_docs.py
 
       - name: Check release
+        id: check_release
         shell: bash
         run: |
           echo ${{ github.event.ref }} 
@@ -56,7 +57,7 @@ jobs:
           fi
 
       - name: Copy docs
-        if: steps.check-tag.outputs.release == 'true'
+        if: steps.check_release.outputs.release == 'true'
         shell: bash
         run: |
           version=$(echo ${{ github.event.ref }} | grep -o -E "([0-9]+\.){1}[0-9]+(\.[0-9]+)?") 
