--- a/.github/workflows/upload-gh-pages.yml
+++ b/.github/workflows/upload-gh-pages.yml
@@ -63,7 +63,7 @@ jobs:
           version=$(echo ${{ github.event.ref }} | grep -o -E "([0-9]+\.){1}[0-9]+(\.[0-9]+)?") 
           mkdir -p docs/api/$version
           cp docs/api/index.html docs/api/$version/
-          git checkout -- docs/api/index.html 
+          git restore docs/api/index.html 
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
